<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dang_Ky"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#0C87E8"
        android:text="@string/txt_chaomungban"/>
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/txt_dangkytaikhoan"/>
    <EditText
        android:id="@+id/edt_username_dk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nhapusername"/>
    <EditText
        android:id="@+id/edt_password_dk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nhappassword"/>
    <EditText
        android:id="@+id/edt_retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_retypepassword"/>
    <Button
        android:id="@+id/btn_login_dk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="Dang Nhap"/>
    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textAllCaps="true"
        android:text="Tro Ve"/>
</LinearLayout>