<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dang_Nhap"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_chaomungbandaquaytrolai"
        android:textColor="#03A9F4"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_vuilongdangnhapdetieptuc"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_marginBottom="20sp"/>
    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nhapusername"/>
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/txt_nhappassword" />
    <CheckBox
        android:id="@+id/cb_nhomk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_ghinhotaikhoan"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đăng Nhập"
            android:backgroundTint="#4CAF50"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:textAllCaps="true"/>
        <Button
            android:id="@+id/btn_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đăng Ký"
            android:backgroundTint="#FF9800"
            android:layout_weight="1"
            android:textAllCaps="true"/>
    </LinearLayout>

</LinearLayout>